<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>java20features</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source.version>20</maven.compiler.source.version>
        <maven.compiler.target.version>20</maven.compiler.target.version>
        <maven.compiler.release>20</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>8.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.10.1</version>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>20</release>
                    <source>20</source>
                    <target>20</target>
                    <compilerArgument>--enable-preview</compilerArgument>
                    <compilerArgument>--add-modules jdk.incubator.concurrent</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>